examples/examples_inferred/good/11-more_lists.ez
headFromhead lst = match lst with { (h::t)::t -> h; };

funcList = [
    lambda: x -> x + 1, 
    lambda: x -> x * 2, 
    lambda: x -> x - 1
];

applyFuncList lst x = match lst with {
    [] -> x;
    f::fs -> applyFuncList fs (f x);
};

main = applyFuncList funcList 3 == 7;
