examples/examples_inferred/bad/06-runtime_error_no_match.ez
noMatchHead lst = match lst with {h::t -> h;};

main = noMatchHead [];
